<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="com.catosci.opencat.OpenCatActivity">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorButton4"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:text="@string/smartcar_mode"
        android:textAlignment="center" />

    <TableLayout
        android:id="@+id/TabLayPosture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorPrimaryDark">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ToggleButton
                android:id="@+id/TogBtnUltra2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button4"
                android:padding="1dp"
                android:textColor="@color/white"
                android:textOff="@string/smartcar_ultrasonic"
                android:textOn="@string/smartcar_ultrasonic" />

            <ToggleButton
                android:id="@+id/TogBtnUltraNoIR2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button4"
                android:padding="1dp"
                android:textColor="@color/white"
                android:textOff="@string/smartcar_ultrasonic_noir"
                android:textOn="@string/smartcar_ultrasonic_noir" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ToggleButton
                android:id="@+id/TogBtnTracking2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button4"
                android:padding="1dp"
                android:textColor="@color/white"
                android:textOff="@string/smartcar_tracking"
                android:textOn="@string/smartcar_tracking" />

            <ToggleButton
                android:id="@+id/TogBtnFollow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button4"
                android:padding="1dp"
                android:textColor="@color/white"
                android:textOff="@string/smartcar_follow"
                android:textOn="@string/smartcar_follow" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />
    </TableLayout>


    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButton3"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:text="@string/smartcar_sensor"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@id/TabLayServo"
        tools:visibility="gone" />

    <TableLayout
        android:id="@+id/TabLayServo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="3dp"
        android:layout_weight="0"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="IR sx"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextTextPersonName5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Sonar"
                android:textAlignment="center"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextTextPersonName6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="IR dx"
                android:textAlignment="center"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtIRsx2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1"
                android:textAlignment="center"
                android:textColor="#FFA726"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSonar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0.00"
                android:textAlignment="center"
                android:textColor="#FFA726"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtIRdx2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1"
                android:textAlignment="center"
                android:textColor="#FFA726"
                android:textSize="24sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center" />
    </TableLayout>


    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButton2"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:text="@string/smartcar_move"
        android:textAlignment="center" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimaryDark">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btSlow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button2"
                android:text="@string/smartcar_btn_slow"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btNormal2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button2"
                android:text="@string/smartcar_btn_normal"
                android:textColor="@color/colorButton2" />

            <Button
                android:id="@+id/btFast2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button2"
                android:text="@string/smartcar_btn_fast"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <com.catosci.opencat.JoystickView
        android:id="@+id/joystickMove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/TxtBattery2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

</LinearLayout>