<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/app_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/connect_details" />

        <Button
            android:id="@+id/BtnOpenInstruction"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/white"
            android:text="Click for Instrction Manual"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_weight="2"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/idProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0"
                android:translationZ="10dp" />

            <TextView
                android:id="@+id/idConnectingBluetooth"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:editable="false"
                android:fontFamily="@font/amiko"
                android:text="@string/connectig_bluetooth"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:translationZ="10dp"
                app:layout_constraintTop_toBottomOf="@+id/idProgressBar" />

        </LinearLayout>

        <Button
            android:id="@+id/btConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/rouded_button5"
            android:text="@string/btn_connect" />
    </LinearLayout>
</LinearLayout>